--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
+    "@tailwindcss/vite": "^4.0.2",
+    "leva": "^0.10.0",
     "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^4.0.2",
     "three": "^0.173.0",
     "vite-plugin-restart": "^0.4.2"
   },
